# docs/swagger.json
@@ -5,33 +5,7 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/acc-data/list": {
-            "get": {
-                "description": "gets data of the specified tag - get your tags via \"list\" first",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "acc-data"
-                ],
-                "summary": "gets acc data of the specified tag",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.AccelerationSensor"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/acc-data/{tag}": {
+        "/acc-data/get/{tag}/{page}": {
             "get": {
                 "description": "gets data of the specified tag - get your tags via \"list\" first",
                 "consumes": [
@@ -59,6 +33,32 @@
                         "description": "OK",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/acc-data/list": {
+            "get": {
+                "description": "gets data of the specified tag - get your tags via \"list\" first",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "acc-data"
+                ],
+                "summary": "gets acc data of the specified tag",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.AccelerationSensor"
+                            }
                         }
                     }
                 }
@@ -113,7 +113,7 @@
                 }
             }
         },
-        "/structure/list": {
+        "/structure/gateway/list": {
             "get": {
                 "description": "lists gateways",
                 "consumes": [
@@ -126,6 +126,32 @@
                     "structure"
                 ],
                 "summary": "lists available gateways",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Gateway"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/structure/tag/list/{gateway_id}": {
+            "get": {
+                "description": "lists tags",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "structure"
+                ],
+                "summary": "lists available tags",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -156,11 +182,20 @@
         "model.Gateway": {
             "type": "object",
             "properties": {
-                "gateway_config": {
-                    "$ref": "#/definitions/model.GatewayConfig"
+                "id": {
+                    "type": "string"
+                },
+                "ip_address": {
+                    "type": "string"
                 },
                 "last_contact": {
                     "type": "string"
+                },
+                "network_segment": {
+                    "type": "integer"
+                },
+                "online": {
+                    "type": "boolean"
                 },
                 "tags": {
                     "type": "array",
@@ -179,8 +214,14 @@
                 "address": {
                     "type": "string"
                 },
+                "last_contact": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
+                },
+                "online": {
+                    "type": "boolean"
                 },
                 "sensors": {
                     "type": "array",
