# model/gateway.go
@@ -1,18 +1,21 @@
 package model
 
 import (
+	"crypto/md5"
+	"encoding/hex"
 	"fmt"
 	"math/rand"
 	"time"
 )
 
 type Gateway struct {
-	Tags           []Tag         `json:"tags"`
-	Config         GatewayConfig `json:"gateway_config"`
+	Tags           []Tag         `json:"tags,omitempty"`
+	Config         GatewayConfig `json:"-"`
 	NetworkSegment int           `json:"network_segment"`
 	LastContact    time.Time     `json:"last_contact"`
 	Online         bool          `json:"online"`
 	IPAdress       string        `json:"ip_address"`
+	ID             string        `json:"id"`
 }
 
 func NewGateway() Gateway {
@@ -23,6 +26,8 @@ func NewGateway() Gateway {
 	tagcnt := rand.Intn(15)
 	gw.NetworkSegment = rand.Intn(5)
 	gw.IPAdress = fmt.Sprintf("%d.%d.%d.%d", 10, 0, gw.NetworkSegment, rand.Intn(254))
+	hash := md5.New().Sum([]byte(gw.IPAdress))
+	gw.ID = hex.EncodeToString(hash[:])
 	for i := 0; i < tagcnt; i++ {
 		tag := NewTag()
 		gw.Tags = append(gw.Tags, tag)
